--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_donate-cta.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_donate-cta.scss
@@ -1,4 +1,4 @@
-.donate-cta-containter {
+.donate-cta-container {
   --donate-cta-button-color: $white;
   --donate-cta-text-color: $white;
   --donate-cta-overlay-color: rgba(0, 0, 0, 0.5);
