--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_donation.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_donation.scss
@@ -1,5 +1,5 @@
 
-.donation-containter {
+.donation-container {
   --donation-button-color: $white;
   --donation-overlay-color: rgba(0, 0, 0, 0.5);
 
