--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_petition.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_petition.scss
@@ -1,5 +1,5 @@
 
-.petition-containter {
+.petition-container {
   --petition-button-color: $white;
   --petition-overlay-color: rgba(0, 0, 0, 0.5);
 
