--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_post-hero.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_post-hero.scss
@@ -1,4 +1,4 @@
-.post-hero-containter {
+.post-hero-container {
   --post-hero-button-color: $white;
   --post-hero-overlay-color: rgba(0, 0, 0, 0.5);
 
