--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_newsletter.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_newsletter.scss
@@ -1,7 +1,6 @@
-
-.newsletter-containter {
-  --newsletter-button-color: $white;
-  --newsletter-overlay-color: rgba(0, 0, 0, 0.5);
+.cta {
+  @include color-mods;
+  @include overlay-element;
 
   position: relative;
   background-position: center center;
@@ -10,36 +9,10 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-
-  @include media("<tablet") {
-    flex-direction: column;
-    align-items: center;
-  }
 }
 
-.newsletter-overlay {
-  background-color: var(--newsletter-overlay-color, rgba(0, 0, 0, 0.5));
-  width: 100%;
-  height: 100%;
-}
-
-.newsletter-content {
-  width: 40%;
-  align-items: flex-start;
-  height: 100%;
+.cta__content {
   justify-content: center;
-
-  @include media("<tablet") {
-    width: 95% !important;
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-    padding: 1em 0;
-  }
-
-  @include media(">phone") {
-    padding: 2em 2.625em;
-  }
 
   .newsletter-text {
     display: flex;
@@ -47,29 +20,11 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 3em;
-
-    @include media("<tablet") {
-      flex-direction: column;
-      margin-right: 0;
-      width: 95%;
-      padding: 1em 0;
-    }
-  }
-
-  @include media("<tablet") {
-    text-align: -webkit-center;
-    width: auto;
   }
 }
 
-.newsletter-headline {
+.cta__heading {
   text-align: center;
-
-  @include media("<tablet") {
-    width: 95%;
-    text-align: center;
-    padding: 1em 0;
-  }
 
   h2 {
     font-family: $league;
@@ -78,14 +33,10 @@
     margin-top: 0;
     margin-bottom: 0;
     font-size: 3.6em;
-
-    @include media("<tablet") {
-      font-size: 2.5em;
-    }
   }
 }
 
-.newsletter-subheading {
+.cta__subheading {
   text-align: -webkit-center;
 
   @include media("<tablet") {
@@ -103,14 +54,14 @@
   }
 }
 
-.newsletter-title {
+.cta__title {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
 }
 
-.newsletter-image {
+.cta__image {
   width: 60%;
 
   @include media("<tablet") {
@@ -118,15 +69,10 @@
   }
 }
 
-.newsletter-form {
+.cta__form {
   color: white;
   position: relative;
   padding: 3em 0;
-
-  @include media("<tablet") {
-    width: 95%;
-    padding: 0;
-  }
 
   .salesforce_w2l_lead.sf_one_column {
     width: 100%;
