--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
@@ -1,8 +1,7 @@
-header {
+header.site-header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 4.8rem;
   z-index: 10;
   transition:
     top 0.3s ease-in-out,
@@ -23,13 +22,10 @@ header {
   padding-left: 1rem;
 
   .logo {
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: contain;
-    transform: scale(0.9);
     z-index: 10000;
-    top: 0.7rem;
+    width: 100px;
     transition: all 0.3s ease-in-out;
+    padding-top: 20px;
   }
 
   ul {
@@ -39,14 +35,12 @@ header {
 }
 
 .nav-up {
-  height: 2.6rem;
+  height: 3rem;
   background-color: rgba(0, 0, 0, 0.9);
   transition: all 0.3s ease-in-out;
 
   .logo {
-    top: 0.85rem;
     transition: all 0.3s ease-in-out;
-    transform: scale(0.7);
   }
 
   ul {
