fixed font resolution

--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/main.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/main.scss
@@ -1,6 +1,7 @@
 @import "vendors/normalize";
 @import "base/fonts";
 @import "base/variables";
+@import "base/typography";
 @import "base/helpers";
 @import "pixel-bootstrap";
 @import "blocks/blocks";
