--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
@@ -1,19 +1,8 @@
 @font-face {
   font-family: "LeagueSpartan-Bold";
   src:
-    url("/app/themes/dream-defenders/assets/fonts/leaguespartan-bold.otf") format("opentype"),
-    url("/app/themes/dream-defenders/assets/fonts/leaguespartan-bold.woff") format("woff"),
-    url("/app/themes/dream-defenders/assets/fonts/leaguespartan-bold.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Agipo-Regular";
-  src:
-    url("/app/themes/dream-defenders/assets/fonts/Agiporegular.otf") format("opentype"),
-    url("/app/themes/dream-defenders/assets/fonts/Agiporegular.woff") format("woff"),
-    url("/app/themes/dream-defenders/assets/fonts/Agiporegular.ttf") format("truetype");
+    url("../fonts/leaguespartan-bold.woff") format("woff"),
+    url("../fonts/leaguespartan-bold.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
