top menu mobile fixes and accessibility

--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/blocks/_blocks.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/blocks/_blocks.scss
@@ -1,6 +1,7 @@
 @import "atomic";
 
 .wp-blocks {
+  @import "blocks/typography";
   @import "blocks/media";
   @import "blocks/lists";
   @import "blocks/dropcap";
