--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
@@ -1,3 +1,12 @@
+/**
+ * Rama Gothic C Bold
+ *
+ * font-family: rama-gothic-c, sans-serif;
+ * font-weight: 700;
+ * font-style: normal;
+ **/
+@import url("https://use.typekit.net/len4son.css");
+
 @font-face {
   font-family: "LeagueSpartan-Bold";
   src:
