--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/blocks/blocks/_media.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/blocks/blocks/_media.scss
@@ -75,7 +75,7 @@
 .wp-block-audio {
   audio {
     @include db;
-    @include w-70-l;
+    @include w-100;
     @include ml-auto;
     @include mr-auto;
 
