--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_helpers.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_helpers.scss
@@ -16,12 +16,8 @@
   @extend %clearfix;
 }
 
-.league-font {
-  font-family: $league;
-}
-
 %transition {
-  transition: all 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 // justify nav
