--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_feeds.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_feeds.scss
@@ -25,16 +25,76 @@
     }
 
     article {
-      @include pa4;
+      @include pa6;
+
+      .posted {
+        @include white;
+        @include tr;
+        @include dib;
+        @include w-100;
+        @include mb1;
+      }
+
+      time {
+        @include black;
+        @include bg-yellow;
+        @include pv1;
+        @include ph2;
+        @include f6;
+        @include mb1;
+        @include dib;
+        @include mt3;
+        @include o-50;
+
+        border-radius: 45px;
+      }
+
+      h2 {
+        @include ttu;
+        @include font-league;
+        @include f2;
+        @include mt0;
+        @include w-80;
+        @include pt2;
+        @include tracked;
+
+        a {
+          background:
+            linear-gradient(
+              to bottom,
+              $white 0%,
+              $white 100%
+            );
+          color: $white;
+          background-position: 20% 80%;
+          background-repeat: repeat-x;
+          background-size: 4px 2px;
+          text-decoration: none;
+          transition: background-size 0.2s;
+
+          @include lh-copy;
+          @include pa1;
+        }
+
+        a:hover {
+          background-size: 4px 60px;
+          transition: background-size 0.2s;
+
+          @include black;
+        }
+      }
+
+      .entry-summary p {
+        @include sans-serif;
+        @include lh-copy;
+        @include f4;
+
+        letter-spacing: 0.1ch;
+      }
     }
 
     * {
       color: white;
-
-      a:hover {
-        @include bg-black;
-        @include white;
-      }
     }
   }
 }
