NEW: CPT for campaign work, CPT for freedom papers. Taxonomies for both. Freedom Paper component, template for campaigns and freedom papers.'

--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_fonts.scss
@@ -7,6 +7,9 @@
  **/
 @import url("https://use.typekit.net/len4son.css");
 
+/**
+ * League Spartan Bold
+ **/
 @font-face {
   font-family: "LeagueSpartan-Bold";
   src:
@@ -16,6 +19,9 @@
   font-style: normal;
 }
 
+/**
+ * System Fonts
+ **/
 @font-face {
   font-family: system;
   font-style: normal;
