--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_typography.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/base/_typography.scss
@@ -29,7 +29,7 @@ main .wp-blocks {
     @include font-system();
     @include lh-copy;
 
-    a {
+    a:not(.wp-block-button__link) {
       background:
         linear-gradient(
           to bottom,
@@ -50,7 +50,13 @@ main .wp-blocks {
     a:hover {
       background-size: 4px 50px;
 
+      @include bg-black;
       @include white;
+
+      *:hover {
+        @include bg-black;
+        @include white;
+      }
     }
   }
 
