--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_hero.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_hero.scss
@@ -167,5 +167,10 @@
     @include white;
   }
 
+  .term__description p {
+    @include white;
+    @include f5;
+  }
+
   transition: transform 0.3s ease-in-out;
 }
