--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
@@ -10,6 +10,10 @@ header.site-header {
     background-image 0.5s ease-in-out;
 }
 
+.single-freedom-paper header.site-header {
+  background: black;
+}
+
 .top-panel {
   background: transparent;
   display: flex;
