--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_feeds.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/layouts/_feeds.scss
@@ -18,14 +18,20 @@
       flex-grow: 1;
     }
 
-    @media screen and (max-width: $breakpoint-not-small) {
+    @media screen and (max-width: $medium-screen) {
       width: 100vw;
       flex-wrap: wrap;
       flex-grow: 1;
     }
 
     article {
-      @include pa6;
+      @media screen and (min-width: $medium-screen) {
+        @include pa6;
+      }
+
+      @media screen and (max-width: $medium-screen) {
+        @include pa2;
+      }
 
       .posted {
         @include white;
