--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/_pixel-bootstrap.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/_pixel-bootstrap.scss
@@ -120,6 +120,10 @@ main {
   }
 }
 
+.contained {
+  max-width: 1000px;
+}
+
 .post-index .half-it {
   @media screen and (min-width: $medium-screen) {
     @include db;
