--- a/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/main.scss
+++ b/dreamdefenders.org/web/app/themes/sage/resources/assets/styles/main.scss
@@ -5,9 +5,9 @@
 @import "blocks/blocks";
 @import "pixel-bootstrap";
 @import "base/typography";
-@import "components/spinner";
-@import "components/hamburgers";
-@import "layouts/header";
+// @import "components/spinner";
+// @import "components/hamburgers";
+// @import "layouts/header";
 @import "layouts/hero";
 @import "layouts/footer";
 @import "layouts/feeds";
