--- a/web/app/themes/sage/resources/assets/styles/editor.scss
+++ b/web/app/themes/sage/resources/assets/styles/editor.scss
@@ -15,7 +15,7 @@
 
   .wp-block,
   .wp-block .editor-post-title__input {
-    max-width: 1024;
+    max-width: 1024px;
   }
 
   .editor-post-title__input {
