--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -6,3 +6,9 @@
 /** app */
 @import 'app/spacing';
 @import 'app/typography';
+@import 'app/align';
+@import 'app/lists';
+
+/** blocks */
+@import 'blocks/core-heading';
+@import 'blocks/core-pullquote';
