--- a/web/app/themes/sage/resources/assets/styles/app/align.scss
+++ b/web/app/themes/sage/resources/assets/styles/app/align.scss
@@ -6,20 +6,22 @@
 .alignwide {
   margin-left: calc(-90vw/2 + 100%/2);
   margin-right: calc(-90vw/2 + 100%/2);
-  max-width: 90vw;
+  width: 90vw !important;
+  max-width: 90vw !important;
 
   img {
-    width: 90vw;
+    width: 90vw !important;
   }
 }
 
 .alignfull {
   margin-left: calc(-100vw/2 + 100%/2);
   margin-right: calc(-100vw/2 + 100%/2);
+  width: 100vw !important;
   max-width: 100vw !important;
 
   img {
-    width: 100%;
-    max-width: 100%;
+    width: 100% !important;
+    max-width: 100% !important;
   }
 }
