--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -4,8 +4,9 @@
 @import 'tailwindcss/utilities';
 
 /** app */
-@import 'app/spacing';
+@import 'app/fonts';
 @import 'app/typography';
+@import 'app/spacing';
 @import 'app/align';
 @import 'app/lists';
 
