improved styles: group, embed, aspect ratios, postcss

--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -5,11 +5,14 @@
 
 /** app */
 @import 'app/fonts';
+@import 'app/colors';
 @import 'app/typography';
 @import 'app/spacing';
 @import 'app/align';
 @import 'app/lists';
 
 /** blocks */
+@import 'blocks/core-embed';
 @import 'blocks/core-heading';
+@import 'blocks/core-group';
 @import 'blocks/core-pullquote';
