--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -10,7 +10,67 @@
 @import './wordpress/breakpoints';
 @import './wordpress/animations';
 @import './wordpress/z-index';
-@import '@wordpress/block-library/src/style';
+@import '@wordpress/block-library/src/audio/style';
+@import '@wordpress/block-library/src/button/style';
+@import '@wordpress/block-library/src/buttons/style';
+@import '@wordpress/block-library/src/categories/style';
+@import '@wordpress/block-library/src/columns/style';
+@import '@wordpress/block-library/src/cover/style';
+@import '@wordpress/block-library/src/embed/style';
+@import '@wordpress/block-library/src/file/style';
+@import '@wordpress/block-library/src/gallery/style';
+@import '@wordpress/block-library/src/image/style';
+@import '@wordpress/block-library/src/paragraph/style';
+@import '@wordpress/block-library/src/pullquote/style';
+@import '@wordpress/block-library/src/quote/style';
+@import '@wordpress/block-library/src/search/style';
+@import '@wordpress/block-library/src/separator/style';
+@import '@wordpress/block-library/src/social-links/style';
+@import '@wordpress/block-library/src/spacer/style';
+@import '@wordpress/block-library/src/subhead/style';
+@import '@wordpress/block-library/src/text-columns/style';
+@import '@wordpress/block-library/src/video/style';
+
+:root {
+  // Font sizes.
+  .has-small-font-size {
+    font-size: 13px;
+  }
+
+  .has-regular-font-size, // Not used now, kept because of backward compatibility.
+  .has-normal-font-size {
+    font-size: 16px;
+  }
+
+  .has-medium-font-size {
+    font-size: 20px;
+  }
+
+  .has-large-font-size {
+    font-size: 36px;
+  }
+
+  .has-larger-font-size, // Not used now, kept because of backward compatibility.
+  .has-huge-font-size {
+    font-size: 42px;
+  }
+
+  // Text alignments.
+  .has-text-align-center {
+    text-align: center;
+  }
+
+  .has-text-align-left {
+    /*rtl:ignore*/
+    text-align: left;
+  }
+
+  .has-text-align-right {
+    /*rtl:ignore*/
+    text-align: right;
+  }
+}
+
 
 /** app */
 @import 'app/fonts';
